Implement smart dumb components

--- a/angular.json
+++ b/angular.json
@@ -120,5 +120,8 @@
       }
     }
   },
-  "defaultProject": "smart-v-presentation"
+  "defaultProject": "smart-v-presentation",
+  "cli": {
+    "analytics": false
+  }
 }
